io-takamaka-examples/src/main/java/io/takamaka/tests/errors/selfchargednotincontract/C.java
package io.takamaka.tests.errors.selfchargednotincontract;

import io.takamaka.code.lang.SelfCharged;
import io.takamaka.code.lang.Storage;

public class C extends Storage {

	public @SelfCharged void foo() {}
}